# RTMPX

./: README.md  README_en.md  gradle.properties  settings.gradle
app/: build.gradle
app/libs/: rtmpx-1.0.1.aar  rtmpx-1.0.2.aar  rtmpx-1.0.3.aar
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rtmpx/app/: MainActivity.java
app/src/main/java/com/rtmpx/app/config/: Const.java
app/src/main/java/com/rtmpx/app/ui/: MainActivity.java  PublishPreferenceActivity.java
app/src/main/java/com/rtmpx/app/utils/: Utils.java
app/src/main/java/com/rtmpx/app/widget/: FocusView.java  VerticalSeekBar.java
app/src/main/res/drawable/: ic_baseline_lock_24.xml  ic_baseline_lock_open_24.xml  ic_circle_solid.xml  ic_circle_stroke.xml  ic_circle_stroke_0_8dp.xml  ic_divider_0_5dp.xml  ic_sun_24dp.xml  round_corner_grey_5dp.xml  selector_exposure_lock_unlock.xml
app/src/main/res/layout/: activity_main.xml  activity_publish_setting.xml  vr_view_exposure.xml  vr_view_focus.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: values.xml
gradle/wrapper/: gradle-wrapper.properties
rtmpx_library/: build.gradle
rtmpx_library/src/main/: AndroidManifest.xml
rtmpx_library/src/main/cpp/: CMakeLists.txt  librtmp-jni.c  librtmp-jni.h  rtmpmuxer.c  yuv_convert.cpp
rtmpx_library/src/main/cpp/flvmuxer/: xiecc_rtmp.c  xiecc_rtmp.h
